--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background: url('https://i.imgur.com/Ou5J7DT.jpg') no-repeat center center fixed;
-  background-size: cover;
+  background: linear-gradient(to right, #1e1e2f, #2c2c47);
   color: #ffffff;
   min-height: 100vh;
   display: flex;
@@ -17,17 +16,6 @@ body {
   padding: 2rem;
   position: relative;
   z-index: 1;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(20, 20, 40, 0.85);
-  z-index: -1;
 }
 
 header {
